--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,16 @@
 
     <application
         android:allowBackup="true"
-        android:name=".app.StockApplication"
+        android:name=".StockApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StockApp">
         <activity
-            android:name=".ui.activity.LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:exported="true" />
-        <activity android:name=".ui.activity.SplashActivity">
+        <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
         <activity
             android:name=".TestActivity"
             android:exported="true"></activity>
-        <activity android:name=".ui.activity.MainActivity"></activity>
+        <activity android:name=".ui.base.MainActivity"></activity>
     </application>
 
 </manifest>
