--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,16 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true" />
-        <activity android:name=".ui.splash.SplashActivity">
+        <activity
+            android:name=".TestActivity"
+            android:exported="true" />
+        <activity android:name=".ui.base.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".TestActivity"
-            android:exported="true"></activity>
-        <activity android:name=".ui.base.MainActivity"></activity>
     </application>
 
 </manifest>
